# LifeTrace

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ASR_ALTERNATIVES.md  FASTER_WHISPER_SETUP.md  INSTALL_FUNASR.md  PACKAGING_DESKTOP.md  PRE_COMMIT_GUIDE.md  README.md  README_CN.md  bandit.yaml  biome.json  pyproject.toml  pyrightconfig.json  requirements-runtime.txt
.cursor/commands/: agno_agent.md  agno_agent_CN.md  backend.md  backend_CN.md  dynamic-island.md  web.md
.cursor/plans/: electron_打包前端方案_611a9d42.plan.md  openapi_类型安全集成_3f7f3b0c.plan.md  pydanticai_todo_agent_dd4d4b71.plan.md  后端架构重构方案_53f664e0.plan.md  打包与性能优化_ecd1657a.plan.md
.github/: BACKEND_GUIDELINES.md  BACKEND_GUIDELINES_CN.md  CONTRIBUTING.md  CONTRIBUTING_CN.md  FRONTEND_GUIDELINES.md  FRONTEND_GUIDELINES_CN.md  INSTALL.md  INSTALL_CN.md  PRE_COMMIT_GUIDE.md  PRE_COMMIT_GUIDE_CN.md  dependabot.yml
.github/workflows/: bandit.yml  dev-build-verify.yml  pre-commit.yml
DynamicIsland_bundle/: pnpm-lock.yaml
DynamicIsland_bundle/app/: ClientLayout.tsx  layout.tsx  page.tsx
DynamicIsland_bundle/docs/: ELECTRON_WINDOW_CONFIG.md
DynamicIsland_bundle/electron/: main.ts  preload.ts
DynamicIsland_bundle/scripts/: build-electron.js  check-logs.sh  dev-with-auto-port.js
desktop-pet/: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.electron.json  tsconfig.node.json  vite.config.ts
desktop-pet/electron/: main.ts  preload.ts
desktop-pet/src/: App.tsx  index.css  vite-env.d.ts
doc/: api_configuration_guide.md  config_hot_reload_test.md  event_context_chat_usage.md  event_count_fix.md  event_management_fix_summary.md  memory_optimization_guide.md  multimodal_disable_optimization.md  pr8_fixes.md  pyinstaller_packaging_analysis.md  scroll_loading_fix.md  setup_guide.md  uv_usage_guide.md
docs/: audio-module-flow.md  screenshot-todo-flow.md
float_chat/: script.js
free-todo-frontend/: .gitignore  ELECTRON_README.md  electron-builder.json  electron-builder.yml  global.d.ts  next.config.mjs  next.config.ts  orval.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
free-todo-frontend/app/: globals.css  layout.tsx  page.tsx
free-todo-frontend/docs/: TECH_ARCH_DYNAMIC_ISLAND_PANEL_ELECTRON.md
free-todo-frontend/electron/: ICONS_README.md  PACKAGING_GUIDE.md  PACKAGING_GUIDE_CN.md  backend-server.ts  bootstrap-status.ts  bootstrap-window.ts  config.ts  ipc-handlers-todo-capture.ts  ipc-handlers.ts  island-window-manager.ts  logger.ts  main.js  main.ts  next-server.ts  preload.js  preload.ts  process-manager.ts  python-runtime.ts  tray-manager.ts  window-manager.ts  后端启动检查指南.md  完整打包指南.md  打包指南.md
free-todo-frontend/lib/: api.ts  reminders.ts  utils.ts
free-todo-frontend/scripts/: build-electron.js  check_code_lines.js  check_code_lines.mts  check_rust_code_lines.js  dev-with-auto-port.js  diagnose.sh  electron-dev.ps1  generate-icons.js  tauri-prebuild.js  view-logs.sh
free-todo-frontend/src-tauri/: Cargo.toml  PACKAGING_GUIDE.md  tauri.conf.json  tauri.island.pyinstaller.json  tauri.island.script.json  tauri.lint.json  tauri.web.pyinstaller.json  tauri.web.script.json
free-todo-frontend/src-tauri/src/: backend.rs  backend_paths.rs  backend_python.rs  backend_support.rs  config.rs  lib.rs  shortcut.rs  tray.rs
frontend/: CHANGES_SUMMARY.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  SIDEBAR_MIGRATION.md  SIDEBAR_QUICKSTART.md  next.config.ts  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/devlog/: CONFIG_KEY_NAMING.md  FRONTEND_CONFIG_KEYS.md  WORKSPACE_TAB_PLAN.md
frontend/lib/: api.ts  toast.ts  types.ts  utils.ts
frontend/scripts/: check-i18n.js
lifetrace/: README.md  alembic.ini  pyinstaller.spec  server.py
lifetrace/alembic/: env.py
lifetrace/config/: default_config.yaml  prompt.yaml  rapidocr_config.yaml
lifetrace/core/: config_watcher.py  dependencies.py  lazy_services.py  module_registry.py
lifetrace/devlog/: CONTEXT_MANAGEMENT_API.md  PROJECT_MANAGEMENT_API.md  PROJECT_TASK_SUMMARY.md  TASK_MANAGEMENT_API.md  TASK_SUMMARY_SERVICE.md  test_project_api.py
lifetrace/docs/: journal_api.md  vision_api.md
lifetrace/jobs/: activity_aggregator.py  clean_data.py  deadline_reminder.py  job_manager.py  ocr.py  ocr_config.py  ocr_processor.py  recorder.py  recorder_capture.py  scheduler.py  task_context_mapper.py  task_summary.py  todo_recorder.py
lifetrace/llm/: __init__.py  activity_summary_service.py  agent_service.py  agno_agent.py  auto_todo_detection_service.py  context_builder.py  event_summary_clustering.py  event_summary_ocr.py  event_summary_service.py  llm_client.py  llm_client_query.py  llm_client_vision.py  multimodal_embedding.py  multimodal_vector_service.py  ocr_todo_extractor.py  rag_fallback.py  rag_project.py  rag_service.py  retrieval_service.py  tavily_client.py  todo_agent.py  todo_extraction_service.py  vector_db.py  vector_service.py  web_search_service.py
lifetrace/migrations/: env.py  re_extract_all_transcriptions.py
lifetrace/observability/: config.py  setup.py
lifetrace/repositories/: interfaces.py  sql_journal_repository.py  sql_project_repository.py  sql_task_repository.py  sql_todo_repository.py
lifetrace/routers/: activity.py  agent.py  audio.py  audio_ws.py  audio_ws_handler.py  audio_ws_segment.py  behavior.py  chat.py  config.py  context.py  cost_tracking.py  dependencies.py  event.py  floating_capture.py  health.py  journal.py  logs.py  notification.py  ocr.py  plan.py  proactive_ocr.py  project.py  rag.py  scheduler.py  screenshot.py  search.py  system.py  task.py  time_allocation.py  todo.py  todo_extraction.py  transcripts.py  vector.py  vision.py  voice_stream.py  voice_stream_whisper.py  workspace.py
lifetrace/schemas/: __init__.py  activity.py  chat.py  (+14 more)
lifetrace_backend/: server.py  server_todo_api.py
scripts/: install.ps1  install.sh  install_web.ps1  install_web.sh  link_worktree_deps.ps1  new_worktree.py  precommit_clippy.py  precommit_rustfmt.py
tests/: test_todo_serialization.py  test_todo_service_mapping.py
(+625 files in other folders)
