[project]
name = "lifetrace"
version = "0.1.0"
description = "LifeTrace - A cross-platform screen recording and activity tracking application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Core dependencies
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    # Screenshot and image processing
    "mss>=9.0.0",
    "Pillow>=10.0.0",
    "imagehash>=4.3.0",
    "opencv-python>=4.8.0",
    # OCR processing
    "rapidocr-onnxruntime",
    "numpy>=1.21.0",
    # Data processing
    "pyyaml>=6.0",
    "watchdog>=3.0.0",
    "typer>=0.9.0",
    # Scheduler
    "apscheduler>=3.10.0",
    # Web interface
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    # Utils
    "psutil>=5.9.0",
    "python-dateutil>=2.8.0",
    # Command line interface
    "rich>=13.0.0",
    # PyTorch (Required by CLIP)
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchaudio>=2.0.0",
    # Transformers (Hugging Face CLIP model)
    "transformers>=4.21.0",
    # Numerical computing
    "scipy>=1.9.0",
    # Embedding models and vector database
    "sentence-transformers>=2.2.0",
    "chromadb>=0.4.0",
    # OpenAI API
    "openai>=1.0.0",
    # Environment variables
    "python-dotenv>=1.0.0",
    # macOS specific dependencies (only install on macOS)
    "pyobjc-framework-Cocoa>=9.0; sys_platform == 'darwin'",
    "pyobjc-framework-Quartz>=9.0; sys_platform == 'darwin'",
    # Windows specific dependencies (only install on Windows)
    "pywin32>=306; sys_platform == 'win32'",
    "open-clip-torch>=3.2.0",
    "loguru>=0.7.3",
]

# Ruff 配置 - Python linter 和 formatter
[tool.ruff]
# 每行最大字符数（默认 88，可以根据需要调整）
line-length = 100

# 目标 Python 版本
target-version = "py313"

# 排除的目录
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
# 启用的规则集
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "PLR",  # Pylint refactoring (包含复杂度检查)
    "C90",  # mccabe (复杂度检查)
]

# 忽略的规则
ignore = [
    "E501",  # 行太长（已经通过 line-length 控制）
    "B008",  # 不要在函数调用中使用可变默认参数
]

# Pylint 复杂度配置
[tool.ruff.lint.pylint]
# 函数最大语句数（软限制：50，硬限制：100）
max-statements = 50
# 函数最大参数数
max-args = 7
# 函数最大返回语句数
max-returns = 6
# 函数最大分支数
max-branches = 12
# 类中最大公共方法数（帮助控制单个文件大小）
max-public-methods = 20

# McCabe 复杂度配置
[tool.ruff.lint.mccabe]
# 最大圈复杂度（软限制：10，硬限制：15）
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
# 测试文件可以使用 assert
"tests/*.py" = ["S101"]

[tool.ruff.format]
# 使用双引号
quote-style = "double"

# 缩进使用 4 个空格
indent-style = "space"

# uv 配置 - 包管理器镜像源
[tool.uv]
# 使用清华大学 PyPI 镜像源（国内访问速度快）
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[dependency-groups]
dev = [
    "pre-commit>=4.4.0",
    "ruff>=0.14.4",
]
