[project]
name = "lifetrace"
version = "0.1.0"
description = "LifeTrace - A cross-platform screen recording and activity tracking application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Core dependencies
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "sqlmodel>=0.0.22",
    "alembic>=1.14.0",
    # Screenshot and image processing
    "mss>=9.0.0",
    "Pillow>=10.0.0",
    "imagehash>=4.3.0",
    # OCR processing (rapidocr requires numpy)
    "rapidocr-onnxruntime",
    "numpy>=1.21.0,<2.0.0",  # 限制到 1.x 版本以确保 PyInstaller 兼容性
    # Data processing
    "pyyaml>=6.0",
    "sentence-transformers>=2.2.0",  # 文本嵌入模型
    "chromadb>=0.4.0",               # 向量数据库
    "scipy>=1.9.0",                  # 科学计算（用于余弦距离）
    "hdbscan>=0.8.0",                # 文本聚类算法
    # Scheduler
    "apscheduler>=3.10.0",
    # Utils
    "psutil>=5.9.0",
    # OpenAI API
    "openai>=1.0.0",
    # Tavily API for web search
    "tavily-python>=0.5.0",
    # Configuration management with hot reload support (includes yaml support)
    "dynaconf[yaml]>=3.2.0",
    # Logging
    "loguru>=0.7.3",
    # macOS specific dependencies (only install on macOS)
    "pyobjc-framework-Cocoa>=9.0; sys_platform == 'darwin'",
    "pyobjc-framework-Quartz>=9.0; sys_platform == 'darwin'",
    # Windows specific dependencies (only install on Windows)
    "pywin32>=306; sys_platform == 'win32'",
]

# Ruff 配置 - Python linter 和 formatter
[tool.ruff]
# 每行最大字符数（默认 88，可以根据需要调整）
line-length = 100

# 目标 Python 版本
target-version = "py313"

# 排除的目录
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
# 启用的规则集
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "PLR",  # Pylint refactoring (包含复杂度检查)
    "C90",  # mccabe (复杂度检查)
]

# 忽略的规则
ignore = [
    "E501",  # 行太长（已经通过 line-length 控制）
    "B008",  # 不要在函数调用中使用可变默认参数
]

# Pylint 复杂度配置
[tool.ruff.lint.pylint]
# 函数最大语句数（软限制：50，硬限制：100）
max-statements = 50
# 函数最大参数数
max-args = 7
# 函数最大返回语句数
max-returns = 6
# 函数最大分支数
max-branches = 12
# 类中最大公共方法数（帮助控制单个文件大小）
max-public-methods = 20

# McCabe 复杂度配置
[tool.ruff.lint.mccabe]
# 最大圈复杂度（软限制：10，硬限制：15）
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
# 测试文件可以使用 assert
"tests/*.py" = ["S101"]

[tool.ruff.format]
# 使用双引号
quote-style = "double"

# 缩进使用 4 个空格
indent-style = "space"

# uv 配置 - 包管理器镜像源
[tool.uv]
# 使用清华大学 PyPI 镜像源（国内访问速度快）
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[dependency-groups]
# 开发工具
dev = [
    "pre-commit>=4.4.0",
    "ruff>=0.14.4",
    "pyinstaller>=6.0.0",
]
