[package]
name = "free-todo"
version = "0.1.2"
description = "FreeTodo - Your Intelligent Todo Application"
authors = ["FreeUGroup"]
license = "MIT"
repository = "https://github.com/FreeUGroup/LifeTrace"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
png = "0.17"
axum = "0.7"
rand = "0.8"
flate2 = "1"
tar = "0.4"
zip = "0.6"
futures-util = "0.3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
